err/grailtact.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/GrailTact'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/browser'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/content'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/interfaces'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/portlets'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/profiles'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/profiles/default'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/profiles/default/types'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/skins'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/skins/GrailTact'...
Listing './lib/python3.5/site-packages/GrailTact/GrailTact/tests'...
Listing './lib/python3.5/site-packages/GrailTact-1.4.1.egg-info'...
Listing './lib/python3.5/site-packages/MegamanicEdit'...
Listing './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit'...
Listing './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/browser'...
Listing './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/profiles'...
Listing './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/profiles/default'...
Listing './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins'...
Listing './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit'...
Compiling './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/get_megamanic_editable_objects.py'...
***   File "./lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/get_megamanic_editable_objects.py", line 27
    return editable
                  ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/isMegamanicEditable.py'...
***   File "./lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/isMegamanicEditable.py", line 11
    return False
               ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/isMegamanicEditableTemplateObject.py'...
***   File "./lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/isMegamanicEditableTemplateObject.py", line 9
    return False
               ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/replace_name_and_title.py'...
***   File "./lib/python3.5/site-packages/MegamanicEdit/MegamanicEdit/skins/MegamanicEdit/replace_name_and_title.py", line 18
    return new
             ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/MegamanicEdit-2.0.12.egg-info'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/browser'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/interfaces'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/portlets'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/profiles'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/profiles/default'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets'...
Compiling './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/getEmailPrefix.py'...
***   File "./lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/getEmailPrefix.py", line 10
    return context.absolute_url() + '/create_email?to='
    ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/getEmailTarget.py'...
***   File "./lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/getEmailTarget.py", line 9
    return '_top'
                ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/isEmail.py'...
***   File "./lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/isEmail.py", line 9
    return context.portal_registration.isValidEmail(toCheck)
                                                           ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/isURI.py'...
***   File "./lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/skins/VariousDisplayWidgets/isURI.py", line 12
    if toCheck.startswith(prefix): return True
                                  ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/tests'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets/VariousDisplayWidgets/widgets'...
Listing './lib/python3.5/site-packages/VariousDisplayWidgets-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
